<resources>
    <string name="app_name">A_Rodar</string>
    <string name="Login">Iniciar sesión</string>
    <string name="title_roll_out">A RODAR</string>
    <string name="No_account">¿No tienes cuenta? Cree una.</string>
    <string name="Forgot_Password">¿Ha olvidado su contraseña?</string>
    <string name="Register">Registrarse</string>
    <string name="Email">Correo Electrónico</string>
    <string name="Password">Contraseña</string>
    <string name="Registration_title">REGISTRO</string>
    <string name="name">Nombre</string>
    <string name="phone_number">Número de teléfono</string>
    <string name="repear_password">Repetir Contraseña</string>
    <string name="login_title">INICIAR SESIÓN</string>
    <string name="no_account">¿No tienes cuenta?</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="maps">Maps</string>
    <string name="routes">Routes</string>
    <string name="details">Details</string>
</resources>